Changes with Apache 1.2.1

  *) "HostnameLookups" now defaults to off because it is far better for
     the net if we require people that actually need this data to
     enable it.  [Linus Torvalds]

  *) "make clean" at the top level now removes *.o.  [Dean Gaudet] PR#752

  *) Don't serve file system objects unless they are plain files, symlinks,
     or directories.  This prevents local users from using pipes or
     named sockets to invoke programs for an extremely crude form of
     CGI.  [Dean Gaudet]

  *) HeaderName and ReadmeName were settable in .htaccess and could
     contain "../" allowing a local user to "publish" any file on the
     system.  No slashes are allowed now.  [Dean Gaudet]

  *) It was possible to violate the symlink Options using mod_dir (headers,
     readmes, titles), mod_negotiation (type maps), or mod_cern_meta
     (meta files).  [Dean Gaudet]

  *) Update Unixware support for 2.1.2.  [Lawrence Rosenman <ler@lerctr.org>]
     PR#511

  *) Port to NonStop-UX [Joachim Schmitz <schmitz_joachim@tandem.com>] PR#327

  *) Update ConvexOS support for 11.5.  [David DeSimone <fox@convex.com>]
     PR#399

  *) Support for dec cc compiler under ultrix.
     ["P. Alejandro Lopez-Valencia" <alejolo@ideam.gov.co>] PR#388

  *) Support for Maxion/OS SVR4.2 Real Time Unix. [no name given] PR#383

  *) mod_status dumps core in inetd mode.  [Marc Slemko and Roy Fielding]
     PR#566

  *) Attempt to work around problems with third party libraries that do not
     handle high numbered descriptors (examples include bind, and
     solaris libc).  On all systems apache attempts to keep all permanent
     descriptors above 15 (called the low slack line).  Solaris users
     can also benefit from adding -DHIGH_SLACK_LINE=256 to EXTRA_CFLAGS
     which keeps all non-FILE * descriptors above 255.  On all systems
     this should make supporting large numbers of vhosts with many open
     log files more feasible.  If this causes trouble please report it,